solved issues with responsive design on mobile devices

--- a/style.css
+++ b/style.css
@@ -7,18 +7,13 @@ body {
     overflow: hidden;
     height: 100dvh;
     margin: 0;
-    /*background: linear-gradient(to top, rgba(22, 38, 0, 0.35),rgba(84, 118, 39, 0.35), rgb(36, 111, 158), rgb(2, 68, 109));*/
     background: linear-gradient(to top, rgb(38, 0, 0),rgb(118, 39, 39), rgb(36, 111, 158), rgb(2, 68, 109));
 }
 
 .menu-button {
-    padding: 10px;
-    width: 6vw;
-    height: 6vw;
-    max-height: 80px;
-    max-width: 80px;
-    min-height: 50px;
-    min-width: 50px;
+    padding: 0px;
+    width: 50px;
+    height: 50px;
     cursor: pointer;
     transition: all 0.4s ease;
     z-index: 1;
@@ -72,53 +67,49 @@ button:hover {
     display: flex; /*toggle*/
     flex-direction: column;
     position: fixed;
-    top: 0;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100vh;
-    background: linear-gradient(to top, rgb(38, 0, 0),rgb(118, 39, 39), rgb(36, 111, 158), rgb(2, 68, 109));
+    height: 80vh;
     transition: all 2s ease;
     z-index: 2;
-    filter: brightness();
 }
 
 .title-img {
     position: absolute;
-    left: 50%;
-    width: 70%;
-    bottom: calc(100px + 10vw);
+    top: 0;
+    transform: translateY(-100%);
     object-fit: contain;
     animation: titleAnimation 10s infinite ease;
+    width: 50%;
     z-index: 2;
     opacity: 0.9;
 }
 
 @keyframes titleAnimation {
     0% {
-        transform: translateX(-50%) translateY(0px);
+        transform: translateY(0px);
     }
     50% {
-        transform: translateX(-50%) translateY(10px);
+        transform: translateY(10px);
     }
     100% {
-        transform: translateX(-50%) translateY(0px);
+        transform: translateY(0px);
     }
 }
 
 .img-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: relative;
     max-width: 1200px;
-    width: 100%;
-    height: 400px;
 }
 
 .main-img {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
     width: 100%;
-    bottom: 0;
+    bottom: 70px;
     object-fit: contain;
 }
 
@@ -133,6 +124,9 @@ button:hover {
 }
 
 #mainImgHeroes {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     animation: pulse 3s infinite ease;
     z-index: 3;
 }
@@ -156,18 +150,18 @@ button:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 4vw;
+    max-height: 60px;
+    gap: 30px;
 }
 
 .load-characters {
     text-align: center;
     background: #ffa904;
     color: white;
-    font-size: 3vw;
-    padding: 6px 12px;
+    font-size: 18px;
+    padding: 6px 20px;
     border-radius: 16px;
     border: 3px solid white;
-    max-width: 200px;
     filter: drop-shadow(0px 0px 10px #2c0f00);
     transition: all 0.5s ease;
 }
@@ -326,11 +320,11 @@ button:hover {
 /* GAME */
 .game {
     display: flex;
-    position: relative;
+    position: absolute;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100dvh;
     width: 100vw;
 }
 
@@ -342,7 +336,6 @@ button:hover {
 
 #gameContainer {
     position: relative;
-    top: 0;
     justify-content: center;
     display: flex;
     opacity: 1;
@@ -546,6 +539,10 @@ canvas {
         border-radius: 0px;
     }
 
+    .main-img {
+        max-height: 300px;
+    }
+
     .char-img {
         width: 100%;
         object-fit: contain;
@@ -580,6 +577,7 @@ canvas {
         min-height: 100dvh;
         max-height: 100dvh;
     }
+
 }
 
 /* DESKTOP ONLY */
@@ -617,4 +615,3 @@ canvas {
         font-size: 20px;
     }
 }
-
